k8s/postgres.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-postgres # Sets Deployment name
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-postgres
  template:
    metadata:
      labels:
        app: gateway-postgres
    spec:
      containers:
        - name: gateway-postgres
          image: postgres:15.2 # Sets Image
          imagePullPolicy: Always
          ports:
            - containerPort: 5432 # Exposes container port
          volumeMounts:
            - mountPath: /var/lib/postgresql
              name: gateway-postgredb
          readinessProbe:
            exec:
              command:
                - /bin/bash
                - -c
                - exec pg_isready -d ${POSTGRES_DB} -U ${POSTGRES_USER} -h localhost -p 5432
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
          resources:
            limits:
              memory: "3Gi"
              cpu: "1000m"
      volumes:
        - name: gateway-postgredb
          persistentVolumeClaim:
            claimName: gateway-postgres-pv-claim

---
apiVersion: v1
kind: Service
metadata:
  name: gateway-postgres # Sets service name
  labels:
    app: gateway-postgres # Labels and Selectors
spec:
  ports:
    - port: 5432 # Sets port to run the postgres application
  selector:
    app: gateway-postgres
